GW-72: Fixed x-overflow on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@ html {
 
 body {
 	font-family: 'montserrat', sans-serif;
+	overflow-x: hidden;
 }
 
 h1 {
